changed tab title and icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Munimau",
-  "name": "React Minimal Portfolio Template",
+  "name": "Nate Baker",
   "icons": [
     {
       "src": "favicon.ico",
